--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -14,11 +14,13 @@
   <p>This is another paragraph.</p>
   <h3>Heading Level 3</h3>
   <p>Yet another paragraph.</p>
-  <p>And one more paragraph for good measure.</p>
+  <p>One more paragraph for good measure.</p>
   <a href="https://www.alueducation.com/">
     <img src="https://theme.zdassets.com/theme_assets/803703/3fcb645f05d526974b259e113222507948dd4326.png"
       alt="African Leadership University Logo">
   </a>
+  <!-- link to tweets.html -->
+  <p>Check out my <a href="tweets.html">tweets</a>.</p>
 </body>
 
 </html>
