chore: more custom styles

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -12,6 +12,7 @@
 <body class="works_on_smartphone">
   <header>
     <ul>
+      <li class="logo">&#9733;</li>
       <li><a href="index.html">Home</a></li>
       <li><a href="tweets.html">Tweets</a></li>
     </ul>
@@ -30,7 +31,7 @@
           alt="African Leadership University Logo">
       </a>
       <!-- link to tweets.html -->
-      <p>Check out my <a href="tweets.html">tweets</a>.</p>
+      <p class="navigation-link">Check out my <a href="tweets.html">tweets</a>.</p>
     </article>
     <aside>
       <p>Placeholder to add comment thread later</p>
