--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -12,6 +12,7 @@
 <body class="works_on_smartphone">
   <header>
     <ul>
+      <li class="logo">&#9733;</li>
       <li><a href="index.html">Home</a></li>
       <li><a href="tweets.html">Tweets</a></li>
     </ul>
@@ -28,7 +29,7 @@
       <script async src="https://platform.twitter.com/widgets.js"></script>
 
       <!-- Link back to index.html -->
-      <a href="index.html">Back to Homepage</a>
+      <a href="index.html" class="navigation-link">Back to Homepage</a>
     </article>
     <aside>
       <p>Placeholder to add comment thread later</p>
