--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -20,6 +20,40 @@
             <a href="login.html">LOGIN</a>
         </div>
     </header>
+    <main>
+        <section>
+            <div>
+                <h1>Get schooled</h1>
+                <p>SMILES GRIN LAUGH</p>
+                <button>REGISTER FOR FREE</button>
+            </div>
+            <div>
+                <h2>Learn from the pros</h2>
+                <div>
+                    <div>
+                        <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                        <h3>Phillip Massey</h3>
+                        <p>« Smile of the year » 2018 - 2019</p>
+                    </div>
+                    <div>
+                        <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                        <h3>Nannie Lawrence</h3>
+                        <p>Best « little smile » 2017</p>
+                    </div>
+                    <div>
+                        <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                        <h3>Bruce Walters</h3>
+                        <p>Best « Friend Smile » live performance 2019</p>
+                    </div>
+                    <div>
+                        <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                        <h3>Henry Hughes</h3>
+                        <p>« 24h smiles » winner 2016 - 2019</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
