--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -21,6 +21,7 @@
         </div>
     </header>
     <main>
+        <!-- banner section -->
         <section>
             <div>
                 <h1>Get schooled</h1>
@@ -50,6 +51,20 @@
                         <h3>Henry Hughes</h3>
                         <p>« 24h smiles » winner 2016 - 2019</p>
                     </div>
+                </div>
+            </div>
+        </section>
+        <!-- quote section -->
+        <section>
+            <div>
+                <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                <div>
+                    <blockquote>« Those tutorials are concise and go straight to the point. I can't think of a better
+                        place to
+                        learn smiling. And it's
+                        so fun!</blockquote>
+                    <p>Person Name</p>
+                    <p>weather presenter</p>
                 </div>
             </div>
         </section>
