--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -68,6 +68,97 @@
                 </div>
             </div>
         </section>
+        <!-- videos section -->
+        <section>
+            <h1>Most popular tutorials</h1>
+            <div>
+                <div>
+                    <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <h2>Diagonal Smile</h2>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div>
+                        <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                        <h3>Phillip Massey</h3>
+                    </div>
+                    <div>
+                        <!-- star ratings -->
+                        <div>
+                            <img src="" alt="">
+                            <img src="" alt="">
+                            <img src="" alt="">
+                            <img src="" alt="">
+                            <img src="" alt="">
+                        </div>
+                        <p>8 min</p>
+                    </div>
+                </div>
+
+                <div>
+                    <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <h2>Sad Smile</h2>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div>
+                        <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                        <h3>Phillip Massey</h3>
+                    </div>
+                    <div>
+                        <!-- star ratings -->
+                        <div>
+                            <img src="" alt="">
+                            <img src="" alt="">
+                            <img src="" alt="">
+                            <img src="" alt="">
+                            <img src="" alt="">
+                        </div>
+                        <p>8 min</p>
+                    </div>
+                </div>
+
+
+                <div>
+                    <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <h2>Natural Smile</h2>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div>
+                        <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                        <h3>Phillip Massey</h3>
+                    </div>
+                    <div>
+                        <!-- star ratings -->
+                        <div>
+                            <img src="" alt="">
+                            <img src="" alt="">
+                            <img src="" alt="">
+                            <img src="" alt="">
+                            <img src="" alt="">
+                        </div>
+                        <p>8 min</p>
+                    </div>
+                </div>
+
+
+                <div>
+                    <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <h2>Happy Smile</h2>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div>
+                        <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                        <h3>Phillip Massey</h3>
+                    </div>
+                    <div>
+                        <!-- star ratings -->
+                        <div>
+                            <img src="" alt="">
+                            <img src="" alt="">
+                            <img src="" alt="">
+                            <img src="" alt="">
+                            <img src="" alt="">
+                        </div>
+                        <p>8 min</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
