--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -159,6 +159,36 @@
                 </div>
             </div>
         </section>
+        <!-- membership section -->
+        <section>
+            <h1>Free membership</h1>
+            <div>
+                <div>
+                    <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <h2>Lorem ipsum</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+
+                <div>
+                    <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <h2>Lorem ipsum</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+
+                <div>
+                    <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <h2>Lorem ipsum</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+
+                <div>
+                    <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <h2>Lorem ipsum</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+            </div>
+            <button>REGISTER FOR FREE</button>
+        </section>
     </main>
 </body>
 
