--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -252,6 +252,20 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div>
+            <div>
+                <img src="https://i.ibb.co/r3mTfbG/logo.png" alt="logo">
+                <div>
+                    <!-- social image links -->
+                    <a href="#"><img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1"></a>
+                    <a href="#"><img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1"></a>
+                    <a href="#"><img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1"></a>
+                </div>
+            </div>
+            <p>©smileschool 2020</p>
+        </div>
+    </footer>
 </body>
 
 </html>
