--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -12,10 +12,10 @@
     <header>
         <div>
             <a href="index.html">
-                <img src="https://i.ibb.co/r3mTfbG/logo.png" alt="logo">
+                <img src="./images/logo.png" class="logo" alt="smile logo">
             </a>
         </div>
-        <div>
+        <div class="nav-links">
             <a href="courses.html">COURSES</a>
             <a href="pricing.html">PRICING</a>
             <a href="login.html">LOGIN</a>
@@ -23,32 +23,32 @@
     </header>
     <main>
         <!-- banner section -->
-        <section>
-            <div>
+        <section class="banner">
+            <div class="banner__learn">
                 <h1>Get schooled</h1>
                 <p>SMILES GRIN LAUGH</p>
                 <button>REGISTER FOR FREE</button>
             </div>
-            <div>
-                <h2>Learn from the pros</h2>
-                <div>
-                    <div>
-                        <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+            <div class="banner__courses">
+                <h2><span class="dcolor">Learn</span> from the pros</h2>
+                <div class="banner__courses__cards__container">
+                    <div class="banner__courses__card">
+                        <img src="./images/philip.png" alt="profile">
                         <h3>Phillip Massey</h3>
                         <p>« Smile of the year » 2018 - 2019</p>
                     </div>
-                    <div>
-                        <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <div class="banner__courses__card">
+                        <img src="./images/nannie.png" alt="profile">
                         <h3>Nannie Lawrence</h3>
                         <p>Best « little smile » 2017</p>
                     </div>
-                    <div>
-                        <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <div class="banner__courses__card">
+                        <img src="./images/bruce.png" alt="profile">
                         <h3>Bruce Walters</h3>
                         <p>Best « Friend Smile » live performance 2019</p>
                     </div>
-                    <div>
-                        <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <div class="banner__courses__card">
+                        <img src="./images/henry.png" alt="profile">
                         <h3>Henry Hughes</h3>
                         <p>« 24h smiles » winner 2016 - 2019</p>
                     </div>
