chore: add page styles

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -56,60 +56,60 @@
             </div>
         </section>
         <!-- quote section -->
-        <section>
-            <div>
-                <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+        <section class="quotes">
+            <div class="quotes__inner">
+                <img src="./images/avatar.png" alt="avatar">
                 <div>
                     <blockquote>« Those tutorials are concise and go straight to the point. I can't think of a better
                         place to
                         learn smiling. And it's
                         so fun!</blockquote>
-                    <p>Person Name</p>
-                    <p>weather presenter</p>
+                    <p class="names">Person Name</p>
+                    <p class="presenter">weather presenter</p>
                 </div>
             </div>
         </section>
         <!-- videos section -->
-        <section>
-            <h1>Most popular tutorials</h1>
-            <div>
+        <section class="videos">
+            <h1>Most <span class="dcolor">popular</span> tutorials</h1>
+            <div class="videos__inner">
                 <div>
-                    <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <img src="./images/preview_diag.png" alt="Preview">
                     <h2>Diagonal Smile</h2>
                     <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                    <div>
-                        <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <div class="profile">
+                        <img src="./images/philip_sm.png" alt="profile">
                         <h3>Phillip Massey</h3>
                     </div>
-                    <div>
+                    <div class="ratings">
                         <!-- star ratings -->
                         <div>
-                            <img src="" alt="">
-                            <img src="" alt="">
-                            <img src="" alt="">
-                            <img src="" alt="">
-                            <img src="" alt="">
+                            <img src="./images/Star_1.png" alt="Star">
+                            <img src="./images/Star_1.png" alt="Star">
+                            <img src="./images/Star_1.png" alt="Star">
+                            <img src="./images/Star_1.png" alt="Star">
+                            <img src="./images/Star_5.png" alt="Star">
                         </div>
                         <p>8 min</p>
                     </div>
                 </div>
 
                 <div>
-                    <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <img src="./images/preview_sad.png" alt="Preview">
                     <h2>Sad Smile</h2>
                     <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                    <div>
-                        <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <div class="profile">
+                        <img src="./images/philip_sm.png" alt="profile">
                         <h3>Phillip Massey</h3>
                     </div>
-                    <div>
+                    <div class="ratings">
                         <!-- star ratings -->
                         <div>
-                            <img src="" alt="">
-                            <img src="" alt="">
-                            <img src="" alt="">
-                            <img src="" alt="">
-                            <img src="" alt="">
+                            <img src="./images/Star_1.png" alt="Star">
+                            <img src="./images/Star_1.png" alt="Star">
+                            <img src="./images/Star_1.png" alt="Star">
+                            <img src="./images/Star_1.png" alt="Star">
+                            <img src="./images/Star_5.png" alt="Star">
                         </div>
                         <p>8 min</p>
                     </div>
@@ -117,21 +117,21 @@
 
 
                 <div>
-                    <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <img src="./images/preview_nat.png" alt="Preview">
                     <h2>Natural Smile</h2>
                     <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                    <div>
-                        <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <div class="profile">
+                        <img src="./images/philip_sm.png" alt="profile">
                         <h3>Phillip Massey</h3>
                     </div>
-                    <div>
+                    <div class="ratings">
                         <!-- star ratings -->
                         <div>
-                            <img src="" alt="">
-                            <img src="" alt="">
-                            <img src="" alt="">
-                            <img src="" alt="">
-                            <img src="" alt="">
+                            <img src="./images/Star_1.png" alt="Star">
+                            <img src="./images/Star_1.png" alt="Star">
+                            <img src="./images/Star_1.png" alt="Star">
+                            <img src="./images/Star_1.png" alt="Star">
+                            <img src="./images/Star_5.png" alt="Star">
                         </div>
                         <p>8 min</p>
                     </div>
@@ -139,21 +139,21 @@
 
 
                 <div>
-                    <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <img src="./images/preview_hap.png" alt="Preview">
                     <h2>Happy Smile</h2>
                     <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                    <div>
-                        <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <div class="profile">
+                        <img src="./images/philip_sm.png" alt="profile">
                         <h3>Phillip Massey</h3>
                     </div>
-                    <div>
+                    <div class="ratings">
                         <!-- star ratings -->
                         <div>
-                            <img src="" alt="">
-                            <img src="" alt="">
-                            <img src="" alt="">
-                            <img src="" alt="">
-                            <img src="" alt="">
+                            <img src="./images/Star_1.png" alt="Star">
+                            <img src="./images/Star_1.png" alt="Star">
+                            <img src="./images/Star_1.png" alt="Star">
+                            <img src="./images/Star_1.png" alt="Star">
+                            <img src="./images/Star_5.png" alt="Star">
                         </div>
                         <p>8 min</p>
                     </div>
@@ -161,29 +161,29 @@
             </div>
         </section>
         <!-- membership section -->
-        <section>
-            <h1>Free membership</h1>
-            <div>
+        <section class="membership">
+            <h1><span class="active">Free</span> membership</h1>
+            <div class="row">
                 <div>
-                    <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <img src="./images/smile.png" alt="teacher1">
                     <h2>Lorem ipsum</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
 
                 <div>
-                    <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <img src="./images/smile.png" alt="smile">
                     <h2>Lorem ipsum</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
 
                 <div>
-                    <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <img src="./images/smile.png" alt="smile">
                     <h2>Lorem ipsum</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
 
                 <div>
-                    <img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1">
+                    <img src="./images/smile.png" alt="smile">
                     <h2>Lorem ipsum</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
@@ -191,9 +191,9 @@
             <button>REGISTER FOR FREE</button>
         </section>
         <!-- FAQ section -->
-        <section>
+        <section class="faq">
             <h1>F.A.Q.</h1>
-            <div>
+            <div class="faq__inner">
                 <div>
                     <div>
                         <h2>How does this work?</h2>
@@ -254,14 +254,14 @@
         </section>
     </main>
     <footer>
-        <div>
+        <div class="footer__inner">
             <div>
-                <img src="https://i.ibb.co/r3mTfbG/logo.png" alt="logo">
+                <img src="./images/logo.png" alt="logo">
                 <div>
                     <!-- social image links -->
-                    <a href="#"><img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1"></a>
-                    <a href="#"><img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1"></a>
-                    <a href="#"><img src="https://i.ibb.co/7yZzQ1v/teacher1.jpg" alt="teacher1"></a>
+                    <a href="#"><img src="./images/Facebook.png" alt="Facebook"></a>
+                    <a href="#"><img src="./images/Twitter.png" alt="Twitter"></a>
+                    <a href="#"><img src="./images/Instagram.png" alt="Instagram"></a>
                 </div>
             </div>
             <p>©smileschool 2020</p>
