chore: support for mobile screens

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Smile School Homepage</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -74,7 +74,10 @@
             <h1>Most <span class="dcolor">popular</span> tutorials</h1>
             <div class="videos__inner">
                 <div>
-                    <img src="./images/preview_diag.png" alt="Preview">
+                    <div class="preview">
+                        <img src="./images/preview_diag.png" alt="Preview" class="preview__image">
+                        <img src="./images/play.png" alt="play" class="play__button">
+                    </div>
                     <h2>Diagonal Smile</h2>
                     <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                     <div class="profile">
@@ -95,7 +98,10 @@
                 </div>
 
                 <div>
-                    <img src="./images/preview_sad.png" alt="Preview">
+                    <div class="preview">
+                        <img src="./images/preview_sad.png" alt="Preview" class="preview__image">
+                        <img src="./images/play.png" alt="play" class="play__button">
+                    </div>
                     <h2>Sad Smile</h2>
                     <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                     <div class="profile">
@@ -117,7 +123,10 @@
 
 
                 <div>
-                    <img src="./images/preview_nat.png" alt="Preview">
+                    <div class="preview">
+                        <img src="./images/preview_nat.png" alt="Preview" class="preview__image">
+                        <img src="./images/play.png" alt="play" class="play__button">
+                    </div>
                     <h2>Natural Smile</h2>
                     <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                     <div class="profile">
@@ -139,7 +148,10 @@
 
 
                 <div>
-                    <img src="./images/preview_hap.png" alt="Preview">
+                    <div class="preview">
+                        <img src="./images/preview_hap.png" alt="Preview" class="preview__image">
+                        <img src="./images/play.png" alt="play" class="play__button">
+                    </div>
                     <h2>Happy Smile</h2>
                     <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                     <div class="profile">
